[package]
name = "simul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.3", features = ["derive", "cargo"] }
csv = "1.1.6"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.152", features = ["derive"] }
